[workspace]
members = [
  "benchmark/linear_memory_function",
  "benchmark/runtime_function",
  "benchmark/size_function",
  "benchmark/stack_memory_function",
  "benchmark/exit_code_function_zero",
  "benchmark/exit_code_function_one"
]

[package]
name = "function-runner"
version = "3.3.0"
edition = "2021"

[profile.benchmark]
inherits = "release"
lto = true
opt-level = "s"

[profile.test]
opt-level = 3

[dependencies]
wasmtime = "6.0.0"
wasmtime-wasi = "6.0.0"
wasi-common = "6.0.0"
deterministic-wasi-ctx = "0.1.9"
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
serde = "1.0"
rust-embed = "6.4.2"
is-terminal = "0.4.6"
bluejay-parser = { git = "https://github.com/adampetro/bluejay", rev = "d52bdb8c2ac66f46020e8b31f9d3c2ee02ade299" }
bluejay-core = { git = "https://github.com/adampetro/bluejay", rev = "d52bdb8c2ac66f46020e8b31f9d3c2ee02ade299", features = ["serde_json"] }
bluejay-validator = { git = "https://github.com/adampetro/bluejay", rev = "d52bdb8c2ac66f46020e8b31f9d3c2ee02ade299" }
itertools = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
